# OCR_Opensource

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  suggestions.md
config/: benchmark_config.yaml  model_registry.yaml
notebooks/: 00_data_prep.ipynb  01_build_sample_sets.ipynb  02_tier1_benchmark.ipynb  03_tier2_benchmark.ipynb  04_traditional_baselines.ipynb  05_evaluation.ipynb  06_results_dashboard.ipynb
requirements/: base.txt  colab_tier1.txt  colab_tier2.txt  toolkits.txt
scripts/: smoke_adapters.py
src/adapters/: base.py  chandra_adapter.py  deepseek_ocr.py  doctr_adapter.py  dots_ocr.py  easyocr_adapter.py  florence2.py  got_ocr2.py  granite_docling_258m.py  granite_vision.py  lighton_ocr.py  mineru_adapter.py  monkey_ocr.py  nanonets_ocr.py  ocrflux.py  olmocr.py  paddleocr_adapter.py  paddleocr_vl15.py  qwen25_vl.py  qwen25_vl_3b.py  rolmocr.py  surya_adapter.py  tesseract_adapter.py
src/data_prep/: build_sample_sets.py  extract_embedded_text.py  extract_pdfs.py  render_pages.py
src/evaluation/: composite_score.py  normalize.py  table_metrics.py  text_metrics.py
src/pipeline/: evaluator.py  profiler.py  runner.py
src/reporting/: __init__.py  dashboard.py  qualitative.py
tests/: test_adapters.py  test_data_prep.py  test_evaluation.py
